[gd_scene load_steps=25 format=3 uid="uid://bt3umb5c7rdsh"]

[ext_resource type="Script" path="res://GUI/main.gd" id="1_3quux"]
[ext_resource type="Texture2D" uid="uid://bo70j7m7ipxty" path="res://assets/sprites/interrogation.png" id="1_eb6tx"]
[ext_resource type="Texture2D" uid="uid://bwk0a0bx6tuc0" path="res://assets/sprites/hover_button.jpg" id="2_m7cnb"]
[ext_resource type="Script" path="res://GUI/button.gd" id="5_wcxnc"]
[ext_resource type="Script" path="res://GUI/RightPanelText.gd" id="6_cn7je"]
[ext_resource type="FontFile" uid="uid://crw3usvl5dopj" path="res://assets/calligraphy/DePixelBreit.ttf" id="6_sau2q"]
[ext_resource type="Texture2D" uid="uid://vf2fjia8ml80" path="res://assets/sprites/exit.png" id="6_v0s5o"]
[ext_resource type="Texture2D" uid="uid://byy1igqd12n7t" path="res://assets/sprites/hover_exit.jpg" id="8_61c1v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cm4j8"]
bg_color = Color(0.00784314, 0.0784314, 0.0862745, 1)
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_71u13"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_cm4j8")

[sub_resource type="Theme" id="Theme_4ra4q"]
Label/fonts/font = ExtResource("6_sau2q")
Label/styles/normal = null

[sub_resource type="Theme" id="Theme_ubwcp"]
Button/colors/font_color = Color(0.962733, 0.557627, 0.250034, 1)
Button/colors/font_hover_color = Color(0.58762, 0.196521, 0.0133497, 1)
Button/fonts/font = ExtResource("6_sau2q")

[sub_resource type="Resource" id="Resource_whfg6"]
script = ExtResource("6_cn7je")
titulo = "Controls"
texto_ayuda = "[b]Main Actions[/b] 

[font_size=11]To move around the different scenes and kill your enemies you must to know the next buttons and comands:[/font_size]

[table=2]
[cell][img=75%]res://assets/sprites/controls.png[/img][/cell]
[cell][font_size=11][ul bullet=-]
 To jump press the button [color= WEB_MAROON]W[/color] 
 To move to the left press the button [color= WEB_MAROON]A[/color] 
 To move to the right button [color= WEB_MAROON]D[/color] 
 To bend down press the button [color= WEB_MAROON]S[/color] 
[/ul][/font_size][/cell]
[/table]

[font_size=11]Otherwise, if you prefer to move with other bottons: [/font_size]

[table=2]
[cell][img=75%]res://assets/sprites/controls2.png[/img][/cell]
[cell][font_size=11]
Move through the scene as indicated by one of the arrows on the buttons
[/font_size][/cell]
[/table]"

[sub_resource type="Resource" id="Resource_w86b4"]
script = ExtResource("6_cn7je")
titulo = "Main Actions"
texto_ayuda = "[b]Main Actions[/b] 

[table=1]
[cell padding=0,0,0,5][font_size=11]To use a rifle, hold it steady, aim through the sight or scope at a distant target, and squeeze the trigger gently to fire[/font_size][/cell]

[cell padding=0,5,0,5][center][img=350%]res://assets/sprites/MainActions.png[/img][/center][/cell]

[cell padding=0,5,0,5][font_size=11]This second type of blade, although less common, has a higher level of damage to its opponents.[/font_size][/cell]

[cell padding=0,5,0,5][center][img=350%]res://assets/sprites/MainActions2.png[/img][/center][/cell]

[/table]
"

[sub_resource type="Resource" id="Resource_u35g0"]
script = ExtResource("6_cn7je")
titulo = "Aps and Mps "
texto_ayuda = "[b]Aps and Mps[/b] 

[table=2, center]
[cell][img=140%, center]res://assets/sprites/apsMps.png[/img][/cell][cell][font_size=11]aps and mps that the player has are shown in a bar at the bottom of the game. When the player loses the total aps he loses the game.[/font_size][/cell]
[/table]
[font_size=11]
[ul bullet=-]
[color= WEB_MAROON]Ap[/color]: are action points that limit the number of actions a character can perform in a turn.
[color= WEB_MAROON]Mp[/color]: are magic points that determine the amount of magic skills or spells a character can cast.
[/ul]
[/font_size]
[table=1]
[cell padding=0,5,0,5][center][img=350%]res://assets/sprites/apsMps2.png[/img][/center][/cell]
[cell padding=0,5,0,5][font_size=11]This second type of blade, although less common, has a higher level of damage to its opponents.[/font_size][/cell]
[/table]
[table=2, center]
[cell][img=35%]res://assets/sprites/apMp3.png[/img][/cell][cell][font_size=11]In case you have low AP you can use a first aid kit to heal yourself[/font_size][/cell]
[/table]

"

[sub_resource type="Resource" id="Resource_5lx6f"]
script = ExtResource("6_cn7je")
titulo = "GUI"
texto_ayuda = "[b]interface[/b] 

[table=2, center]
[cell][img=80%]res://assets/sprites/ObjectsMenu.png[/img][/cell][cell][font_size=11]Weapons are acquired as you walk through the scenes, these are saved in the [color= DARK_ORANGE]objects men√∫[/color].[/font_size][/cell]
[/table]
[font_size=11]The fire arms and ammunition equipment that you can find in the game are listed below:[/font_size]

[table=2, center]
[cell][img=80%]res://assets/sprites/GUImap.png[/img][/cell][cell][font_size=11]In the upper right corner you can find the [color= DARK_ORANGE]map[/color], where you can see where you are located in the scene you are in.[/font_size][/cell]
[/table]
[font_size=11]The fire arms and ammunition equipment that you can find in the game are listed below:[/font_size]


"

[sub_resource type="Resource" id="Resource_k8cdx"]
script = ExtResource("6_cn7je")
titulo = "Fire Arms"
texto_ayuda = "[b]Fire Arms[/b] 

[table=2, center]
[cell][img=105%]res://assets/sprites/FireArmsIndicator.png[/img][/cell][cell][font_size=11]In the lower left corner, in addition to seeing the player's condition, you can see what weapon he is using and if he has ammunition.[/font_size][/cell]
[/table]
[font_size=11]The fire arms and ammunition equipment that you can find in the game are listed below:[/font_size]

[table=2]
[cell][center][img=150]res://assets/sprites/FireArms4.png[/img][/center][/cell][cell][font_size=11]To use a grenade, pull the pin while holding the lever down. Aim at your target, then throw the grenade in a quick, fluid motion. After throwing, immediately take cover to avoid the explosion.[/font_size][/cell]

[cell][center][img=75%]res://assets/sprites/FireArms1.png[/img][/center][/cell][cell][font_size=11]To use a grenade, pull the pin while holding the lever down. Aim at your target, then throw the grenade in a quick, fluid motion. After throwing, immediately take cover to avoid the explosion.[/font_size][/cell]

[cell][center][img=150]res://assets/sprites/FireArms2.png[/img][/center][/cell][cell][font_size=11]To use a rifle, hold it steady, aim through the sight or scope at a distant target, and squeeze the trigger gently to fire[/font_size][/cell]


[cell][center][img=75%]res://assets/sprites/FireArms3.png[/img][/center][/cell][cell][font_size=11]Using a pistol you must to approach the target at close range, aim quickly at the center mass, and pull the trigger with a firm grip.[/font_size][/cell]

[cell][center][img=75%]res://assets/sprites/FireArms5.png[/img][/center][/cell][cell][font_size=11]Pistol ammunition[/font_size][/cell]

[/table]
"

[sub_resource type="Resource" id="Resource_n03jy"]
script = ExtResource("6_cn7je")
titulo = "Blades"
texto_ayuda = "[b]Fire Arms[/b] 
[table=2]
[cell][center][img=75%]res://assets/sprites/Blades1.png[/img][/center][/cell][cell][font_size=11]To use a grenade, pull the pin while holding the lever down.[/font_size][/cell]


[cell][center][img=75%]res://assets/sprites/blade2.png[/img][/center][/cell][cell][font_size=11]This second type of blade, although less common, has a higher level of damage to its opponents.[/font_size][/cell]
[/table]
[font_size=11]In a game, blades can be versatile weapons used for both offense and defense. Players can use them to perform quick, light attacks that deal damage in rapid succession or execute powerful strikes with slower, more deliberate movements. Blades are often effective in close combat, allowing players to dodge or parry incoming attacks while staying mobile[/font_size]

[font_size=11]To make the most of blades, focus on speed and precision. Timing your attacks and dodges is key to outmaneuvering enemies. Some games may also let you upgrade blades with special abilities, like increasing damage, adding elemental effects, or enhancing critical hit chances[/font_size]


"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rccjp"]
bg_color = Color(0.00781379, 0.173056, 0.198336, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0.0232807, 0.0183307, 0.0114123, 1)

[sub_resource type="Theme" id="Theme_p8se5"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_rccjp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7owf"]

[sub_resource type="Theme" id="Theme_jttvm"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_e7owf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcibf"]
bg_color = Color(0.0097365, 0.0774823, 0.0849037, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_pvvsn"]
default_base_scale = 0.85
PanelContainer/styles/panel = SubResource("StyleBoxFlat_tcibf")

[node name="main" type="Node2D"]
script = ExtResource("1_3quux")

[node name="HelpButtonLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="HelpButtonLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -37.0
offset_right = 109.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.374083, 0.4)
tooltip_text = "


"
theme_override_constants/separation = 10

[node name="help_button" type="TextureButton" parent="HelpButtonLayer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Help panel"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_eb6tx")
texture_hover = ExtResource("2_m7cnb")

[node name="PrincipalPanelLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="PrincipalPanelLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = -231.5
offset_right = 441.0
offset_bottom = 231.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PrincipalPanelLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LeftPanel" type="PanelContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(34, 350)
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_71u13")

[node name="VBoxContainer" type="VBoxContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TopicsLabel" type="Label" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4ra4q")
text = "TOPICS"
horizontal_alignment = 1

[node name="ControlsButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "CONTROLS
"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_whfg6")

[node name="MainActionsButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "MAIN ACTIONS"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_w86b4")

[node name="APButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "APS AND MPS"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_u35g0")

[node name="GUIButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "GUI
"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_5lx6f")

[node name="FirearmsButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "FIREARMS"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_k8cdx")

[node name="BladesButton" type="Button" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ubwcp")
theme_override_font_sizes/font_size = 12
text = "BLADES
"
alignment = 0
script = ExtResource("5_wcxnc")
right_panel_text = SubResource("Resource_n03jy")

[node name="VBoxContainer" type="VBoxContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExitPanel" type="PanelContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 0
theme = SubResource("Theme_p8se5")

[node name="HBoxContainer" type="HBoxContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer/ExitPanel"]
layout_mode = 2
theme = SubResource("Theme_jttvm")
alignment = 2

[node name="ExitButton" type="TextureButton" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer/ExitPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = ExtResource("6_v0s5o")
texture_hover = ExtResource("8_61c1v")
ignore_texture_size = true
stretch_mode = 0

[node name="RightPanel" type="PanelContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme = SubResource("Theme_pvvsn")

[node name="CenterContainer" type="CenterContainer" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer/RightPanel"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer/RightPanel/CenterContainer"]
custom_minimum_size = Vector2(500, 380)
layout_mode = 2
bbcode_enabled = true
text = "[b]Help Panel [/b] 

[font_size=11]If you have questions about the game, here you can find information about the elements that make up the game and how to play.

In this panel you will find each piece of information in a sectioned form in each of the buttons on the left side.:[/font_size]

[font_size=11][ul bullet=-]
 [hint=Information about the buttons you should use to move around the game][color= ORANGE_RED]Controls[/color][/hint]
 [color= ORANGE_RED]Main Actions[/color] 
 [color= ORANGE_RED]Aps and Mps[/color] 
 [color= ORANGE_RED]Fire Arms and ammunition[/color] 
 [color= ORANGE_RED]Blades[/color] 
[/ul][/font_size]


"

[connection signal="pressed" from="HelpButtonLayer/HBoxContainer/help_button" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="PrincipalPanelLayer/MarginContainer/HBoxContainer/VBoxContainer/ExitPanel/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
